--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "joi": "^17.9.2",
     "nodemon": "^3.0.1",
     "sequelize": "^6.32.1",
+    "sequelize-cli": "^6.6.1",
     "sqlite3": "^5.1.6"
-  },
-  "devDependencies": {
-    "sequelize-cli": "^6.6.1"
   }
 }
